# stampfly-eskf-estimator

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md
config/: default_params.yaml  indoor_params.yaml  outdoor_params.yaml
docs/: README.md
docs/reference_impl/cpp/: CMakeLists.txt  README.md  ekf_position_estimator.cpp  ekf_position_estimator.hpp  eskf_position_estimator.cpp  eskf_position_estimator.hpp
docs/reference_impl/python/: ekf_position_estimator.py
docs/theory/: EKF_Position_Estimation.md  ESKF_Position_Estimation.md  Joseph_Form_Covariance_Update.md
docs/tutorials/: 00_getting_started.md
examples/: 01_vector_operations.cpp  02_quaternion_rotation.cpp  CMakeLists.txt  README.md  complex_simulation_eskf.cpp  simple_estimation_eskf.cpp
include/position_estimator/: eskf_estimator.hpp  filter_parameters.hpp  sensor_interface.hpp  types.hpp
include/stampfly_math/: math_utils.hpp  matrix.hpp  quaternion.hpp  vector3.hpp
output/: simulation_results.csv
scripts/: visualize_covariance.py  visualize_eskf.py
src/estimator/: CMakeLists.txt  eskf_estimator.cpp  filter_parameters.cpp
src/stampfly_math/: CMakeLists.txt  math_utils.cpp  matrix.cpp  quaternion.cpp  vector3.cpp
tests/: CMakeLists.txt
tests/unit/: test_eskf_estimator.cpp
