cmake_minimum_required(VERSION 3.10)
project(stampfly_eskf_estimator VERSION 1.0.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

message(STATUS "========================================")
message(STATUS "  StampFly ESKF Estimator")
message(STATUS "  Educational/Research Project")
message(STATUS "========================================")

# Options
option(BUILD_REFERENCE_IMPL "Build reference implementation (Eigen3-based)" ON)
option(BUILD_EXAMPLES "Build examples" ON)
option(BUILD_TESTS "Build tests" OFF)

# Include directories
include_directories(${CMAKE_SOURCE_DIR}/include)

# StampFly Math Library (独自実装・教育目的)
message(STATUS "")
message(STATUS "Building StampFly Math Library (custom implementation)...")
add_subdirectory(src/stampfly_math)

# ESKF Estimator Library (using stampfly_math)
message(STATUS "")
message(STATUS "Building ESKF Estimator Library...")
add_subdirectory(src/estimator)

# Reference implementation (Eigen3-based, for comparison)
if(BUILD_REFERENCE_IMPL)
    message(STATUS "")
    message(STATUS "Building reference implementation (Eigen3-based)...")
    # Eigen3は参考実装のみで使用
    find_package(Eigen3 QUIET)
    if(EIGEN3_FOUND)
        add_subdirectory(docs/reference_impl/cpp)
    else()
        message(WARNING "Eigen3 not found - skipping reference implementation")
        message(WARNING "Reference implementation is for educational comparison only")
    endif()
endif()

# Examples (uses stampfly_math)
if(BUILD_EXAMPLES)
    message(STATUS "")
    message(STATUS "Building examples (using stampfly_math)...")
    add_subdirectory(examples)
endif()

# Tests
if(BUILD_TESTS)
    message(STATUS "")
    message(STATUS "Building tests...")
    enable_testing()
    add_subdirectory(tests)
endif()

# Installation (for future use)
# install(DIRECTORY include/ DESTINATION include)
# install(TARGETS stampfly_math DESTINATION lib)

# Print configuration summary
message(STATUS "")
message(STATUS "========================================")
message(STATUS "Configuration Summary")
message(STATUS "========================================")
message(STATUS "  Version: ${PROJECT_VERSION}")
message(STATUS "  C++ Standard: C++${CMAKE_CXX_STANDARD}")
message(STATUS "  Build Type: ${CMAKE_BUILD_TYPE}")
message(STATUS "")
message(STATUS "Components:")
message(STATUS "  ✓ StampFly Math Library (custom implementation)")
if(BUILD_REFERENCE_IMPL AND EIGEN3_FOUND)
    message(STATUS "  ✓ Reference Implementation (Eigen3-based)")
    message(STATUS "    Eigen3: ${EIGEN3_INCLUDE_DIR}")
elseif(BUILD_REFERENCE_IMPL)
    message(STATUS "  ✗ Reference Implementation (Eigen3 not found)")
endif()
if(BUILD_EXAMPLES)
    message(STATUS "  ✓ Examples")
endif()
if(BUILD_TESTS)
    message(STATUS "  ✓ Tests")
endif()
message(STATUS "")
message(STATUS "Note: This is an educational/research project")
message(STATUS "      All matrix/vector operations use custom")
message(STATUS "      implementations for learning purposes")
message(STATUS "========================================")
message(STATUS "")
